tests/admission-webhook/webhook/overlays/cert-manager/test_data/expected/kubeflow_apps_v1_deployment_admission-webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admission-webhook
    kustomize.component: admission-webhook
  name: admission-webhook-deployment
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: admission-webhook
      kustomize.component: admission-webhook
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: admission-webhook
        kustomize.component: admission-webhook
    spec:
      containers:
      - args:
        - --tlsCertFile=/etc/webhook/certs/tls.crt
        - --tlsKeyFile=/etc/webhook/certs/tls.key
        image: gcr.io/kubeflow-images-public/admission-webhook:vmaster-gaf96e4e3
        name: admission-webhook
        volumeMounts:
        - mountPath: /etc/webhook/certs
          name: webhook-cert
          readOnly: true
      serviceAccountName: admission-webhook-service-account
      volumes:
      - name: webhook-cert
        secret:
          secretName: webhook-certs
