tests/admission-webhook/webhook/overlays/cert-manager/test_data/expected/kubeflow_~g_v1_configmap_admission-webhook-admission-webhook-parameters.yaml
apiVersion: v1
data:
  issuer: kubeflow-self-signing-issuer
  namespace: kubeflow
kind: ConfigMap
metadata:
  annotations: {}
  labels:
    app: admission-webhook
    kustomize.component: admission-webhook
  name: admission-webhook-admission-webhook-parameters
  namespace: kubeflow
