tests/admission-webhook/webhook/overlays/cert-manager/test_data/expected/kubeflow_~g_v1_serviceaccount_admission-webhook-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: admission-webhook
    kustomize.component: admission-webhook
  name: admission-webhook-service-account
  namespace: kubeflow
